JumpScript/tests/baselines/reference/YieldExpression14_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression14_es6.jump(3,6): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression14_es6.jump (1 errors) ====
    class C {
      foo() {
         yield foo
         ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      }
    }